[gd_scene load_steps=12 format=3 uid="uid://b20u12x06cxjh"]

[ext_resource type="Script" uid="uid://dvy665wcfcao1" path="res://scripts/player_selector.gd" id="2_bgvek"]
[ext_resource type="Texture2D" uid="uid://cwgxchjrai87o" path="res://sprites/buppon.png" id="3_663ph"]
[ext_resource type="AudioStream" uid="uid://byayjo5swd873" path="res://sounds/UI_act.wav" id="3_qo07m"]
[ext_resource type="Script" uid="uid://bvm6akmfrir8o" path="res://scripts/weirdly_specific/wobbly_panel.gd" id="4_6uaf6"]
[ext_resource type="LabelSettings" uid="uid://c5twm708xa7eq" path="res://settings/default_label_settings.tres" id="4_7akwr"]
[ext_resource type="Texture2D" uid="uid://b1klgshecca1b" path="res://sprites/my_life.png" id="5_0wsvy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6wayj"]
atlas = ExtResource("3_663ph")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l3p2"]
atlas = ExtResource("3_663ph")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nhsq"]
atlas = ExtResource("3_663ph")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cd4l"]
atlas = ExtResource("3_663ph")
region = Rect2(64, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7akwr"]
bg_color = Color(0.401427, 0.0469262, 0.0343625, 0.501961)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Control" type="VBoxContainer"]
offset_right = 409.0
offset_bottom = 351.0
script = ExtResource("2_bgvek")
character_type_descriptions = Array[String](["RB-01 \"Устройство\".\\r\\nСредняя скорость.\\r\\nПрочность: 50.\\r\\nСтреляет одиночными снарядами.", "RB-02 \"Конструкция\".\\r\\nНизкая скорость.\\r\\nПрочность: 40.\\r\\nНаносит вдвое больше урона, но стреляет назад.\\r\\nУстанавливает взрывающиеся мины.", "RB-03 \"Агрегат\".\\r\\nКрайне низкая скорость.\\r\\nПрочность: 100.\\r\\nПопеременно использует два стэка с большей скоростью.", "RB-04 \"Механизм\".\\r\\nВысокая скорость.\\r\\nПрочность: 30.\\r\\nВосстанавливает 10 прочности в секунду пока не двигается."])

[node name="PressDoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qo07m")
volume_db = -10.0

[node name="LobbyButtons" type="Panel" parent="."]
visible = false
z_index = -1
custom_minimum_size = Vector2(116, 116)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PlayerBase" type="TextureRect" parent="LobbyButtons"]
layout_mode = 0
offset_left = 33.856
offset_top = 34.0
offset_right = 81.856
offset_bottom = 82.0
pivot_offset = Vector2(24, 24)

[node name="PlayerMask" type="TextureRect" parent="LobbyButtons"]
layout_mode = 0
offset_left = 33.856
offset_top = 34.0
offset_right = 81.856
offset_bottom = 82.0
pivot_offset = Vector2(24, 24)

[node name="Left" type="TextureRect" parent="LobbyButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -16.0
offset_right = 34.0
offset_bottom = 16.0
grow_vertical = 2
texture = SubResource("AtlasTexture_6wayj")
stretch_mode = 3

[node name="Right" type="TextureRect" parent="LobbyButtons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -16.0
offset_right = -2.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("AtlasTexture_5l3p2")
stretch_mode = 3

[node name="Up" type="TextureRect" parent="LobbyButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_5nhsq")
stretch_mode = 3

[node name="Down" type="TextureRect" parent="LobbyButtons"]
layout_mode = 2
offset_left = 42.0
offset_top = 82.0
offset_right = 74.0
offset_bottom = 114.0
texture = SubResource("AtlasTexture_6cd4l")
stretch_mode = 3

[node name="LootboxButtons" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(180, 64)
layout_mode = 2
size_flags_horizontal = 4

[node name="GridContainer" type="GridContainer" parent="LootboxButtons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="NotLobbyButtons" type="Panel" parent="."]
custom_minimum_size = Vector2(116, 116)
layout_mode = 2
size_flags_horizontal = 4

[node name="GridContainer" type="GridContainer" parent="NotLobbyButtons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Ready" type="Label" parent="HBoxContainer"]
self_modulate = Color(0.498039, 0, 0, 1)
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
size_flags_horizontal = 4
text = "Not ready"
label_settings = ExtResource("4_7akwr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/Ready"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeletionSlot" type="Panel" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7akwr")
script = ExtResource("4_6uaf6")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/DeletionSlot"]
modulate = Color(1, 1, 1, 0.501961)
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_0wsvy")

[node name="Stats" type="Label" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
label_settings = ExtResource("4_7akwr")

[node name="Panel" type="Panel" parent="Stats"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
